Saber Pro por facultades

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 ---
 class: inverse, middle, center
 
-# Resultados Pruebas SaberPRO 2017
+# Resultados Pruebas Saber PRO 2017
 
 ---
 
@@ -90,6 +90,36 @@ class: inverse, middle, center
 # &lt;h3&gt; Distribución de puntajes prueba Inglés &lt;/h3&gt;
 
 &lt;img src="index_files/figure-html/unnamed-chunk-11-1.png" style="display: block; margin: auto;" /&gt;
+
+---
+
+# &lt;h3&gt; Resultados por facultades prueba Razonamiento Cuantitativo &lt;/h3&gt;
+
+&lt;img src="index_files/figure-html/unnamed-chunk-12-1.png" style="display: block; margin: auto;" /&gt;
+
+---
+
+# &lt;h3&gt; Resultados por facultades prueba Competencias Ciudadanas &lt;/h3&gt;
+
+&lt;img src="index_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
+
+---
+
+# &lt;h3&gt; Resultados por facultades prueba Lectura Crítica &lt;/h3&gt;
+
+&lt;img src="index_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
+
+---
+
+# &lt;h3&gt; Resultados por facultades prueba Comunicación Escrita  &lt;/h3&gt;
+
+&lt;img src="index_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
+
+---
+
+# &lt;h3&gt; Resultados por facultades prueba Inglés&lt;/h3&gt;
+
+&lt;img src="index_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
